tests/cases/scc/error/0003-junkinclude.c
//!necc-dbg @ -run
#include  "0003-junkinclude.c"      bar
